--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -36,7 +36,11 @@
   background: $header-color;
   height: 100vh;
 }
-
+.nav{
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
 /*---- Page-Wrapper ----*/
 .page-wrapper{
   height: 100vh;
