--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -68,7 +68,6 @@
   height: 250px;
   width: 250px;
   border-radius: 50%;
-  background: #21a4f7;
 }
 .person-document{
   display: flex;
@@ -93,6 +92,7 @@
 }
 .skill-item{
   display: flex;
+  align-items: center;
   justify-content: flex-start;
   padding: 15px;
   gap:5px;
