--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -143,3 +143,9 @@
   border-radius: 15px;
   padding: 25px;
 }
+.image-work{
+  width: 100%;
+  height: 100%;
+  max-width: 250px;
+  max-height: 200px;
+}
