--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -72,6 +72,7 @@
 .person-block{
   display: flex;
   justify-content: space-between;
+  flex-wrap: wrap;
   background: $header-color;
   border: 2px solid $gray-50;
   border-radius: 15px;
@@ -84,8 +85,6 @@
   gap: 20px;
 }
 .person-avatar{
-  height: 250px;
-  width: 250px;
   border-radius: 50%;
 }
 .person-document{
@@ -100,7 +99,7 @@
 }
 .avatar{
   max-width: 100%;
-  max-height: 100%;
+  max-height: 250px;
   border-radius: 50%;
 }
 .skills-block{
@@ -130,6 +129,7 @@
 }
 .block-work{
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
 }
@@ -142,6 +142,7 @@
   border: 2px solid $gray-50;
   border-radius: 15px;
   padding: 25px;
+  min-width: 250px;
 }
 .image-work{
   width: 100%;
