--- a/src/components/sidebar/burger/BurgerMenu.module.css
+++ b/src/components/sidebar/burger/BurgerMenu.module.css
@@ -2,7 +2,7 @@
 .burgerWrapper {
     position: fixed;
     top: 25px;
-    left: 25px;
+    left: 35px;
     display: none;
     justify-content: center;
     align-items: center;
@@ -14,6 +14,7 @@
 }
 
 .burger {
+    position: relative;
     display: block;
     height: 3px;
     width: 20px;
@@ -40,3 +41,9 @@
      width: 20px;
      background: #fff;
  }
+
+@media all and (max-width: 680px){
+    .burgerWrapper{
+        display: flex;
+    }
+}
