--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -201,11 +201,12 @@
 /*---- media ----*/
 @media all and (max-width: 680px) {
   .sidebar {
-    left: 100%;
+    left: -100px;
+    transition-duration: 0.5s;
   }
 
   .page-wrapper {
-    margin: 0;
+    margin: 50px 0 0;
   }
 
   .contact-block {
