--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -6,6 +6,10 @@
   box-sizing: border-box;
 }
 
+::-webkit-scrollbar-track{
+  background-color: #161b22;
+}
+
 .container{
   width: 100%;
   max-width: 1280px;
@@ -156,7 +160,7 @@
 
 .block-work{
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   gap: 20px;
 }
