--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -155,7 +155,7 @@
 
 .block-work {
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   flex-wrap: wrap;
   gap: 20px;
 }
