update component work

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -160,7 +160,7 @@
 
 .block-work{
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 20px;
 }
