--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -89,7 +89,7 @@
   color: white;
 }
 
-/*---- About ----*/
+/*---- Skills ----*/
 .person-block {
   display: flex;
   justify-content: space-between;
