--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -90,7 +90,7 @@
   color: white;
 }
 
-/*---- About ----*/
+/*---- Skills ----*/
 .person-block{
   display: flex;
   justify-content: space-between;
