--- a/src/scss/index.css
+++ b/src/scss/index.css
@@ -62,6 +62,9 @@
 
 /*---- Page-Wrapper ----*/
 .page-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 50px;
   min-height: 100vh;
   background: #0d1117;
   width: 100%;
