--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -184,7 +184,7 @@
   max-height: 200px;
 }
 
-/*---- contact ----*/
+/*---- Contact ----*/
 .contact-page{
   display: flex;
   flex-direction: column;
