--- a/src/components/CardWork/CardWork.module.css
+++ b/src/components/CardWork/CardWork.module.css
@@ -5,3 +5,22 @@
     font-weight: normal;
     letter-spacing: .2rem;
 }
+
+.img {
+    width: 100%;
+    height: 100%;
+    max-width: 250px;
+    max-height: 200px;
+}
+
+.card{
+    display: flex;
+    flex-direction: column;
+    flex: 0 0 30%;
+    gap: 20px;
+    background: #161b22;
+    border: 2px solid rgba(80, 80, 80, 0.5);
+    border-radius: 15px;
+    padding: 25px;
+    min-width: 250px;
+}
