--- a/src/pages/Work/Work.module.css
+++ b/src/pages/Work/Work.module.css
@@ -1,3 +1,16 @@
+.wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.block{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 20px;
+}
+
 .title {
     font-size: 24px;
     color: #fff;
@@ -13,3 +26,4 @@
     font-weight: normal;
     letter-spacing: .2rem;
 }
+
