--- a/src/components/Sidebar/Sidebar.module.css
+++ b/src/components/Sidebar/Sidebar.module.css
@@ -5,21 +5,40 @@
     align-items: center;
     gap: 20px;
     height: 100vh;
+    width: 200px;
     position: fixed;
+    background-color: #161b22;
+    border-right: 2px solid rgba(80, 80, 80, 0.5);
     top: 0;
+    left: -100%;
+    transition: .3s;
+    z-index: 99;
+}
+
+.wrapperActive {
     left: 0;
+    transition: .3s;
 }
 
 .link {
+    width: 100%;
+    text-align: center;
     font-size: 14px;
     color: #fff;
     font-family: 'Zen Dots', cursive;
     font-weight: normal;
     letter-spacing: .2rem;
-    transition: .3s;
+    transition: .3s
 }
 
 .link:hover{
     transform: scale(1.2);
     transition: .3s;
+}
+
+.btn{
+    position: fixed;
+    top: 10px;
+    left: 20px;
+    z-index: 999;
 }
