--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -1,7 +1,17 @@
 .logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     font-size: 16px;
     color: #fff;
     font-family: 'Zen Dots', cursive;
     font-weight: normal;
     letter-spacing: .2rem;
+    cursor: pointer;
+}
+
+.logoImg {
+    height: 16px;
+    width: 16px;
 }
