--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
-#root{
+
+
+#root {
     background-color: #0d1117;
 }
 
@@ -13,6 +17,7 @@
     padding: 0 15px;
     margin: 0 auto;
 }
+
 a {
     text-decoration: none;
 }
