--- a/src/pages/FirstScreen/FirstScreen.module.css
+++ b/src/pages/FirstScreen/FirstScreen.module.css
@@ -20,8 +20,8 @@
     color: #fff;
     font-family: 'Zen Dots', cursive;
     font-weight: normal;
-    padding: 0 15px;
     letter-spacing: .2rem;
+    padding: 0;
 }
 
 .titleH2 {
