--- a/src/components/CardWork/CardWork.module.css
+++ b/src/components/CardWork/CardWork.module.css
@@ -16,7 +16,7 @@
 .card{
     display: flex;
     flex-direction: column;
-    flex: 0 0 30%;
+    width: 300px;
     gap: 20px;
     background: #161b22;
     border: 2px solid rgba(80, 80, 80, 0.5);
