--- a/src/components/SkillCard/SkillCard.module.css
+++ b/src/components/SkillCard/SkillCard.module.css
@@ -19,7 +19,7 @@
 .title {
     font-size: 13px;
     color: #fff;
-    font-family: 'Zen Dots', cursive;
+    font-family: 'Oswald', sans-serif;
     font-weight: normal;
     letter-spacing: .2rem;
 }
