--- a/src/components/CardWork/CardWork.module.css
+++ b/src/components/CardWork/CardWork.module.css
@@ -1,7 +1,7 @@
 .title {
     font-size: 16px;
     color: #fff;
-    font-family: 'Zen Dots', cursive;
+    font-family: 'Oswald', sans-serif;
     font-weight: normal;
     letter-spacing: .2rem;
 }
