--- a/src/components/ContactBlock/ContactBlock.module.css
+++ b/src/components/ContactBlock/ContactBlock.module.css
@@ -10,7 +10,7 @@
 .title {
     font-size: 16px;
     color: #fff;
-    font-family: 'Zen Dots', cursive;
+    font-family: 'Oswald', sans-serif;
     font-weight: normal;
     letter-spacing: .2rem;
     text-decoration: none;
