--- a/src/components/Logo/Logo.module.css
+++ b/src/components/Logo/Logo.module.css
@@ -5,7 +5,7 @@
     gap: 10px;
     font-size: 16px;
     color: #fff;
-    font-family: 'Zen Dots', cursive;
+    font-family: 'Oswald', sans-serif;
     font-weight: normal;
     letter-spacing: .2rem;
     cursor: pointer;
