--- a/src/components/UI/button/MyButton.module.css
+++ b/src/components/UI/button/MyButton.module.css
@@ -9,7 +9,7 @@
     border-radius: 15px;
     text-decoration: none;
     font-size: 16px;
-    font-family: 'Zen Dots', cursive;
+    font-family: 'Oswald', sans-serif;
     font-weight: normal;
     letter-spacing: .2rem;
     transition: .3s;
