--- a/src/pages/Contact/Contact.module.css
+++ b/src/pages/Contact/Contact.module.css
@@ -7,7 +7,7 @@
 .title {
     font-size: 24px;
     color: #fff;
-    font-family: 'Zen Dots', cursive;
+    font-family: 'Oswald', sans-serif;
     font-weight: normal;
     letter-spacing: .2rem;
     text-decoration: none;
