--- a/src/pages/Work/Work.module.css
+++ b/src/pages/Work/Work.module.css
@@ -22,7 +22,7 @@
 .titleH2{
     font-size: 16px;
     color: #fff;
-    font-family: 'Zen Dots', cursive;
+    font-family: 'Oswald', sans-serif;
     font-weight: normal;
     letter-spacing: .2rem;
 }
