--- a/src/components/UI/button/MyButton.module.css
+++ b/src/components/UI/button/MyButton.module.css
@@ -1,22 +1,22 @@
-.btn{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 5px 15px;
-    background-color: #0d1117;
-    color: #fff;
-    cursor: pointer;
-    border-radius: 15px;
-    text-decoration: none;
-    font-size: 16px;
-    font-family: 'Oswald', sans-serif;
-    font-weight: normal;
-    letter-spacing: .2rem;
-    transition: .3s;
+.btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 5px 15px;
+  background-color: #0d1117;
+  color: #fff;
+  cursor: pointer;
+  border-radius: 15px;
+  text-decoration: none;
+  font-size: 16px;
+  font-family: 'Oswald', sans-serif;
+  font-weight: normal;
+  letter-spacing: 0.2rem;
+  transition: 0.3s;
 }
-.btn:hover{
-    background: #161b28;
-    border-color: transparent;
-    transform: scale(1.1);
-    transition: .3s;
+.btn:hover {
+  background: #161b28;
+  border-color: transparent;
+  transform: scale(1.1);
+  transition: 0.3s;
 }
