--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,26 +1,26 @@
 .title {
-    font-size: 16px;
-    color: #fff;
-    font-family: 'Oswald', sans-serif;
-    font-weight: normal;
-    letter-spacing: .2rem;
+  font-size: 16px;
+  color: #fff;
+  font-family: 'Oswald', sans-serif;
+  font-weight: normal;
+  letter-spacing: 0.2rem;
 }
 
 .img {
-    width: 100%;
-    height: 100%;
-    max-width: 250px;
-    max-height: 200px;
+  width: 100%;
+  height: 100%;
+  max-width: 250px;
+  max-height: 200px;
 }
 
-.card{
-    display: flex;
-    flex-direction: column;
-    width: 300px;
-    gap: 20px;
-    background: #161b22;
-    border: 2px solid rgba(80, 80, 80, 0.5);
-    border-radius: 15px;
-    padding: 25px;
-    min-width: 250px;
+.card {
+  display: flex;
+  flex-direction: column;
+  width: 300px;
+  gap: 20px;
+  background: #161b22;
+  border: 2px solid rgba(80, 80, 80, 0.5);
+  border-radius: 15px;
+  padding: 25px;
+  min-width: 250px;
 }
