--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -1,81 +1,81 @@
 .list {
-    display: flex;
-    justify-content: center;
-    gap: 20px;
+  display: flex;
+  justify-content: center;
+  gap: 20px;
 }
 
 .listItem {
-    list-style: none;
-    transition: .3s;
+  list-style: none;
+  transition: 0.3s;
 }
 
 .listLink {
-    font-size: 16px;
-    color: #fff;
-    font-family: 'Oswald', sans-serif;
-    font-weight: normal;
-    letter-spacing: .2rem;
-    cursor: pointer;
-    transition: .3s;
+  font-size: 16px;
+  color: #fff;
+  font-family: 'Oswald', sans-serif;
+  font-weight: normal;
+  letter-spacing: 0.2rem;
+  cursor: pointer;
+  transition: 0.3s;
 }
 
 .listItem:hover {
-    transition: .3s;
-    transform: scale(1.1);
+  transition: 0.3s;
+  transform: scale(1.1);
 }
 
 .burger {
-    display: none;
+  display: none;
 }
 
 @media screen and (max-width: 650px) {
-    .list {
-        display: flex;
-        position: fixed;
-        top: 60px;
-        right: -100%;
-        flex-direction: column;
-        height: 100vh;
-        width: 100%;
-        background-color: #0d1117;
-        z-index: 999;
-        overflow: hidden;
-        transition: .3s;
-    }
+  .list {
+    display: flex;
+    position: fixed;
+    top: 60px;
+    right: -100%;
+    flex-direction: column;
+    height: 100vh;
+    width: 100%;
+    background-color: #0d1117;
+    z-index: 999;
+    overflow: hidden;
+    transition: 0.3s;
+  }
 
-    .listItem {
-        text-align: center;
-    }
+  .listItem {
+    text-align: center;
+  }
 
-    .burger {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        outline: none;
-        border: none;
-        height: 2px;
-        width: 30px;
-        background: #ffffff;
-    }
+  .burger {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    outline: none;
+    border: none;
+    height: 2px;
+    width: 30px;
+    background: #ffffff;
+  }
 
-    .burger::after{
-        content: '';
-        height: 2px;
-        width: 30px;
-        background: #ffffff;
-        transform: translateY(-5px);
-    }
+  .burger::after {
+    content: '';
+    height: 2px;
+    width: 30px;
+    background: #ffffff;
+    transform: translateY(-5px);
+  }
 
-    .burger::before{
-        content: '';
-        height: 2px;
-        width: 30px;
-        background: #ffffff;
-        transform: translateY(5px);
-    }
+  .burger::before {
+    content: '';
+    height: 2px;
+    width: 30px;
+    background: #ffffff;
+    transform: translateY(5px);
+  }
 
-    .active {
-        right: 0;
-        transition: .3s;
-    }
+  .active {
+    right: 0;
+    transition: 0.3s;
+  }
 }
