--- a/src/components/Contact/Contact.module.css
+++ b/src/components/Contact/Contact.module.css
@@ -2,14 +2,13 @@
   display: flex;
   flex-direction: column;
   gap: 20px;
-  padding-bottom: 50px;
+  padding: 20px 0;
 }
 
 .title {
   font-size: 24px;
   color: #fff;
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Zen Dots', cursive;
   font-weight: normal;
   letter-spacing: 0.2rem;
-  text-decoration: none;
 }
