--- a/src/components/Contact/ContactItem/ContactItem.module.css
+++ b/src/components/Contact/ContactItem/ContactItem.module.css
@@ -9,7 +9,9 @@
     background: #161b22;
 }
 
-.title {
+.contact {
+    width: 100%;
+    height: 100%;
     font-family: 'Oswald', sans-serif;
     font-size: 16px;
     color: #fff;
