--- a/src/components/Works/renderSection/RenderSection.module.css
+++ b/src/components/Works/renderSection/RenderSection.module.css
@@ -1,4 +1,4 @@
-.title__section {
+.title {
     font-size: 16px;
     color: #fff;
     font-family: 'Oswald', sans-serif;
@@ -7,15 +7,10 @@
     margin-bottom: 10px;
 }
 
-.block {
-    display: flex;
-    flex: 0 0 33.33%;
-    flex-wrap: wrap;
-    gap: 40px;
-}
 
-@media screen and (max-width: 1024px) {
-    .block {
-        justify-content: center;
-    }
+.wrapper {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 3fr));
+    gap: 20px;
+    justify-items: center;
 }
